--- a/public/react-dom-router-example.html
+++ b/public/react-dom-router-example.html
@@ -51,13 +51,14 @@
           </li>
         </ul>
 
-        <!-- url : /dashboard/profile/1004 -->
+        
+        {/* <!-- url : /dashboard/profile/1004 --> */}
         <div>
           <h3 id="profile">Profile</h3>
           <p>This is the Profile page for user 1004</p>
         </div>
 
-        <!-- url : /dashboard/settings -->
+        {/* !-- url : /dashboard/settings --> */}
         <div>
           <h3>Settings</h3>
           <p>This is the Settings page</p>
